--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@pinecone-database/pinecone": "^0.0.14",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "langchain": "^0.0.69"
+    "langchain": "^0.0.69",
+    "pdf-parse": "^1.1.1"
   },
   "engines": {
     "node": ">=18"
